--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -26,6 +26,7 @@
   border:none;
   color:white;
 }
+
 .display{
   width:100%;
   margin:25px;
@@ -37,6 +38,7 @@
   border-radius: 5px;
 }
 
+/* referenced from youtube video */
 .keys{
   display:grid;
   grid-template-columns: repeat(4, 1fr);
@@ -57,6 +59,7 @@ button{
   border-radius: 35px;
 }
 
+/*looked up how to do on youtube*/
 button:hover{
   background-color: hsl(240, 35%, 40%);
 }
@@ -76,10 +79,12 @@ button:active{
 .button-operator:active{
   background-color:hsl(31, 73%, 40%);  
 }
+
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
 
+/*responsive design made from help from youtube*/
 @media screen and (max-width:724px){
   .display, .calculator{
     width:100%;
